--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@types/d3": "^7.4.3",
     "@types/leaflet": "^1.9.20",
     "d3": "^7.9.0",
